force-app/main/default/objects/Message_Subscription__mdt/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>Application this subscription is for</description>
    <inlineHelpText>Application this subscription is for</inlineHelpText>
    <label>Application</label>
    <referenceTo>Application__mdt</referenceTo>
    <relationshipLabel>Message Subscriptions</relationshipLabel>
    <relationshipName>Message_Subscriptions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>