force-app/main/default/objects/Message_Subscription__mdt/fields/Message_Definition__c.field-meta.xml
<CustomField>
    <fullName>Message_Definition__c</fullName>
    <description>The Message to subscribe to</description>
    <label>Message Definition</label>
    <referenceTo>Message_Definition__mdt</referenceTo>
    <relationshipLabel>Message Subscriptions</relationshipLabel>
    <relationshipName>Message_Subscriptions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>