force-app/main/default/objects/Message_Subscription__mdt/fields/Relay_Client__c.field-meta.xml
<CustomField>
    <fullName>Relay_Client__c</fullName>
    <description>The Fully Qualified Class name of an Relay Client.</description>
    <inlineHelpText>The Fully Qualified Class name of an Relay Client.</inlineHelpText>
    <label>Relay Client</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>